--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,17 @@
     <dimen name="album_list_image_width">256dp</dimen>
     <dimen name="album_list_image_height">256dp</dimen>
 
+    <dimen name="material_toolbar_height">56dp</dimen>
+    <dimen name="material_screen_edge_spacing">16dp</dimen>
+    <dimen name="material_content_spacing">8dp</dimen>
+    <dimen name="material_standard_horizontal_spacing">16dp</dimen>
+
+    <!-- Font size -->
+    <dimen name="material_font_style_size_headline">24sp</dimen>
+    <dimen name="material_font_style_size_title">20sp</dimen>
+    <dimen name="material_font_style_size_subheading">16sp</dimen>
+    <dimen name="material_font_style_size_body_2">14sp</dimen>
+    <dimen name="material_font_style_size_body_1">14sp</dimen>
+    <dimen name="material_font_style_size_caption">12sp</dimen>
+
 </resources>
