--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,33 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Theme.Music" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+        <!-- Text colours -->
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">#ffaff0</item>
+        <item name="android:textColorTertiary">#0ffaa0</item>
+        <item name="android:textColor">#bbbbbb</item>
+
+        <item name="attr_color_text_accent">@color/white</item>
+        <item name="attr_color_text_background_secondary">@color/white</item>
+        <item name="attr_color_background">@color/white</item>
+        <item name="attr_color_background_selected">@color/white</item>
+        <item name="attr_color_text_primary">@color/white</item>
+        <item name="attr_color_text_background_primary">@color/white</item>
     </style>
 
     <style name="Theme.Music.NoActionBar">
@@ -22,4 +38,5 @@
     <style name="Theme.Music.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Music.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
