--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,22 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.gallery.GalleryFragment">
 
-    <TextView
-        android:id="@+id/text_gallery"
+    <LinearLayout
+        android:id="@+id/fragment_gallery_controls_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentBottom="true"
+        android:background="?attr/colorPrimary"
+        android:orientation="vertical"
+        android:paddingBottom="?attr/actionBarSize">
+
+        <RelativeLayout
+            android:id="@+id/now_playing_seekBarLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/material_standard_horizontal_spacing"
+            android:paddingTop="@dimen/material_content_spacing"
+            android:paddingRight="@dimen/material_standard_horizontal_spacing">
+
+            <TextView
+                android:id="@+id/now_playing_elapsedTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:gravity="center"
+                android:textColor="?attr/attr_color_text_accent" />
+
+            <TextView
+                android:id="@+id/now_playing_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="center"
+                android:textColor="?attr/attr_color_text_accent" />
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/volume_seekbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/material_screen_edge_spacing"
+            android:paddingEnd="@dimen/material_screen_edge_spacing"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/volume_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_baseline_add_48"
+                app:tint="?android:textColor" />
+
+            <SeekBar
+                android:id="@+id/volume_seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/volume_button_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingStart="@dimen/material_screen_edge_spacing"
+            android:paddingEnd="@dimen/material_screen_edge_spacing">
+
+            <ImageButton
+                android:id="@+id/volume_button_minus"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="4dp"
+                android:background="?android:selectableItemBackground"
+                android:src="@drawable/ic_baseline_minus_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageView
+                android:id="@+id/volume_icon_buttons"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/ic_baseline_volume_up_48"
+                app:tint="?android:textColor" />
+
+            <TextView
+                android:id="@+id/volume_button_text"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="4dp"
+                android:gravity="center"
+                android:text="100%"
+                android:textColor="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/volume_button_plus"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="4dp"
+                android:background="?android:selectableItemBackground"
+                android:src="@drawable/ic_baseline_add_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/now_playing_buttonLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/material_content_spacing">
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomRepeatButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="center"
+                android:src="@drawable/ic_baseline_repeat_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomPreviousButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_skip_previous_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomPlayPauseButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_play_circle_outline_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomStopButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_stop_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomNextButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_skip_next_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+            <ImageButton
+                android:id="@+id/now_playing_bottomRandomButton"
+                android:layout_width="0px"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="center"
+                android:src="@drawable/ic_baseline_shuffle_48"
+                android:tint="?attr/attr_color_text_accent" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_gallery_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/fragment_gallery_controls_holder"
+        app:fastScrollEnabled="true"
+        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
+        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
+        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
+        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />
+
+</RelativeLayout>
