--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="album_list_image_width">256dp</dimen>
     <dimen name="album_list_image_height">256dp</dimen>
 
+    <dimen name="playlist_image_width">64dp</dimen>
+    <dimen name="playlist_image_height">64dp</dimen>
+
     <dimen name="material_toolbar_height">56dp</dimen>
     <dimen name="material_screen_edge_spacing">16dp</dimen>
     <dimen name="material_content_spacing">8dp</dimen>
