--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_clear_playlist"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/clear_playlist"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add_random"
+        android:orderInCategory="100"
+        android:title="@string/add_random"
         app:showAsAction="never" />
 </menu>
