Fix names of things

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,16 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_library"
+            android:icon="@drawable/ic_baseline_library_music_48"
+            android:title="@string/menu_library" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_playlist"
+            android:icon="@drawable/ic_baseline_playlist_play_24"
+            android:title="@string/menu_playlist" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_stats"
+            android:icon="@drawable/ic_baseline_storage_24"
+            android:title="@string/menu_stats" />
     </group>
 </menu>
