--- a/app/src/main/res/layout/recycler_folder.xml
+++ b/app/src/main/res/layout/recycler_folder.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/recycler_folder_image"
+        android:background="#B4B4B4"
+        android:foregroundGravity="center"
         android:layout_width="@dimen/album_list_image_width"
-        android:layout_height="@dimen/album_list_image_height"
-        android:background="#ff0000" />
+        android:layout_height="@dimen/album_list_image_height" />
 
     <TextView
         android:id="@+id/recycler_folder_top_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#0000ff"
-        android:textAlignment="center" />
+        android:layout_gravity="bottom"
+        android:background="#B4000000"
+        android:textColor="#DADADA"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/recycler_folder_bottom_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00ff00"
-        android:textAlignment="center" />
-
-</LinearLayout>
+</FrameLayout>
