--- a/app/src/main/res/layout/recycler_folder.xml
+++ b/app/src/main/res/layout/recycler_folder.xml
@@ -6,10 +6,11 @@
 
     <ImageView
         android:id="@+id/recycler_folder_image"
+        android:layout_width="@dimen/album_list_image_width"
+        android:layout_height="@dimen/album_list_image_height"
         android:background="#B4B4B4"
         android:foregroundGravity="center"
-        android:layout_width="@dimen/album_list_image_width"
-        android:layout_height="@dimen/album_list_image_height" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/recycler_folder_top_text"
@@ -17,8 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="#B4000000"
-        android:textColor="#DADADA"
         android:textAlignment="center"
+        android:textColor="#DADADA"
         android:textStyle="bold" />
 
 </FrameLayout>
